--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,30 @@ body{
 	font-weight: 300;
 	text-align: center
 }
+#main{
+	margin-top:150px;
+}
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
+::-webkit-scrollbar{width:3px}
+::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);border-radius:10px}
+::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.5);background:#ccc}
+::-webkit-scrollbar-thumb:hover{background:#fff}
+#menu{
+	display: inline-block
+}
+#menu li{
+	list-style-type: none;
+	float:left;
+	text-align: center;
+	margin:auto 15px;
+}
+#menu li a{
+	color:#fff;
+	font-size: 1.2em;
+	text-decoration: none;
+	-webkit-transition-duration:.5s;-o-transition-duration:.5s;-moz-transition-duration:.5s;transition-duration:.5s
+}
+#menu li:nth-child(1) a:hover{color: rgb(211, 0, 0);}
+#menu li:nth-child(2) a:hover{color: rgb(230, 166, 0);}
+#menu li:nth-child(3) a:hover{color: rgb(0, 144, 229);}
+#menu li:nth-child(4) a:hover{color: rgb(2, 151, 0);}
