--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body{
 	margin-top:150px;
 }
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
-::-webkit-scrollbar{width:3px}
+::-webkit-scrollbar{width:3px;height: 3px}
 ::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);border-radius:10px}
 ::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.5);background:#ccc}
 ::-webkit-scrollbar-thumb:hover{background:#fff}
